# agentweave

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT.md  README.md  README.zh-CN.md  app.py  pyproject.toml  requirements.txt
agent_runtime/: __init__.py  common.py  compressor.py  context.py  diagnostic_store.py  embeddings.py  hooks.py  memory_manager.py  memory_store.py  orchestrator.py  preset_questions.py  prompts.py  result_events.py  result_store.py  runtime_utils.py  settings.py  skill_registry.py  skill_runner.py  token_counter.py
agent_runtime/core/: __init__.py  compressor.py  context.py  events.py  hooks.py  model_profiles.py  orchestrator.py  runtime_utils.py  session_ops.py  settings.py  skill_runner.py  tool_protocol.py
agent_runtime/memory/: __init__.py  memory_manager.py
agent_runtime/registry/: __init__.py  resources.py  (+1 more)
data/: README.md
docs/: README.md
subagents/: __init__.py
tests/: test_common.py  test_context.py  test_context_compressor.py  test_db_backend.py  test_diagnostic_store.py  test_events.py  test_frontend_contract_docs.py  test_hooks.py  test_memory_manager.py  test_memory_store.py  test_model_profiles.py  test_orchestrator_tools.py  test_public_imports.py  test_resource_loader.py  test_result_store.py  test_server_app.py  test_server_service.py  test_session_ops.py  test_session_templates.py  test_skill_registry.py  test_skill_runner.py  test_streamlit_diagnostics.py  test_streamlit_formatting.py  test_streamlit_runtime.py  test_text2sql_planning.py  test_text2sql_tools.py  test_token_counter.py
(+48 files in other folders)
